Align fix for Social media icons
Align fix for Social media icons on homepage

--- a/skin/frontend/default/imperiale/css/social-retina.css
+++ b/skin/frontend/default/imperiale/css/social-retina.css
@@ -27,6 +27,7 @@
     display:inline-block;
     *display:inline;
     zoom:1;
+    margin-right: 0.5em;
 }
 
 .soc li a {
